--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -25,6 +25,10 @@ a {
     color: black;
 }
 
+.border-bottom {
+    border-bottom: solid 1px lightblue;
+}
+
 /**/
 .container {
     margin: 0 2rem;
@@ -70,7 +74,6 @@ nav ul {
     grid-template-rows: 25rem 25rem;
     gap: 2rem;
     border-top: solid 1px lightblue;
-    border-bottom: solid 1px lightblue;
     padding: 2rem 0;
 }
 
